# bike_hire

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
data/tmp/: RandomForestRegressor_cv_results.csv  Ridge_cv_results.csv  XGBRegressor_cv_results.csv  clean_stations.csv  ignored_stations.pkl  kmean_clusters.csv  station_cluster.csv
notebooks/: 3. prediction.ipynb  4. prediction-member.ipynb  5. prediction-non-member.ipynb  prediction-member.ipynb  prediction-non-member.ipynb  prediction.ipynb  spatial_analysis.ipynb
