[tool.poetry]
name = "bike_hire"
version = "0.1.0"
description = ""
authors = ["Hong"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.5"
ipython = "^7.25.0"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
