[tool.poetry]
name = "bike_hire"
version = "0.1.0"
description = ""
authors = ["Hong"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.2.5"
ipython = "^7.25.0"
seaborn = "^0.11.1"
geopy = "^2.1.0"
sklearn = "^0.0"
statsmodels = "^0.12.2"
xgboost = "^1.4.2"
scikit-optimize = "^0.8.1"
scikit-learn = "0.23.2"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
